syntax = "proto3";

package Tserve;

//请求注册服务
message ReqRegService {
    int32 serverId = 1;         //服务器ID
    int32 svrType = 2;          //服务器类型
    string host = 3;            //服务器地址
    int32 port = 4;             //服务器类型
}

//响应注册服务
message AckRegService {
    sint32 result = 1;          //操作结果: 0-成功; 非0-失败
    string errmsg = 2;          //描述消息
}